cmake_minimum_required(VERSION 3.1)
get_filename_component(ProjectId ${CMAKE_CURRENT_LIST_DIR} NAME)
string(REPLACE " " "_" ProjectId ${ProjectId})
project(${ProjectId} LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(QT_VERSION_REQ "5.11.0")
SET(CMAKE_PREFIX_PATH  "C:/Qt/Qt5.11.0/5.11.0/msvc2015_64")
SET("OpenCV_DIR" "C:/opencv-3.4.1/build")

find_package( OpenCV COMPONENTS core imgproc highgui aruco optflow plot REQUIRED )
find_package(Qt5 COMPONENTS Core Quick REQUIRED)
find_package(Qt5Widgets)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
add_executable(${PROJECT_NAME} "main.cpp")
target_link_libraries(${PROJECT_NAME} Qt5::Core Qt5::Quick Qt5::Widgets ${OpenCV_LIBS})
